--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -1,6 +1,6 @@
 <div>
     <!-- HEADER -->
-    <div data-dojo-attach-point='header' data-dojo-type='app.Header'></div>
+    <div data-dojo-attach-point='header' data-dojo-type='app/Header'></div>
 
     <!-- MAIN CONTENT -->
     <div class='main-container container'>
@@ -8,7 +8,7 @@
     </div>
 
     <!-- HIDDEN DIALOGS -->
-    <div data-dojo-type="app.SettingsDialog"></div>
+    <div data-dojo-type="app/SettingsDialog"></div>
 
     <!-- FOOTER -->
     <footer>
