--- a/src/app/templates/NewCollectionEvent.html
+++ b/src/app/templates/NewCollectionEvent.html
@@ -5,10 +5,10 @@
     </div>
     <div class='tab-content'>
         <div class='tab-pane fade in active' id='locationTab'>
-            <div data-dojo-attach-point='locationTb' data-dojo-type='app.location.Location'></div>
+            <div data-dojo-attach-point='locationTb' data-dojo-type='app/location/Location'></div>
         </div>
         <div class='tab-pane fade' id='methodTab'>
-            <div data-dojo-attach-point="methodTb" data-dojo-type="app.method.Method"></div>
+            <div data-dojo-attach-point="methodTb" data-dojo-type="app/method/Method"></div>
         </div>
         <div id="catchTab" class="tab-pane fade">
             <div data-dojo-attach-point="catchTb" data-dojo-type="app/catch/Catch"></div>
