--- a/src/app/location/templates/StartDistDirGeoDef.html
+++ b/src/app/location/templates/StartDistDirGeoDef.html
@@ -1,6 +1,6 @@
 <div>
     <div class='row'>
-        <div data-dojo-attach-point='startPointDef' data-dojo-type='app.location.PointDef' data-dojo-props="label: 'Start'" class='col-md-2'></div>
+        <div data-dojo-attach-point='startPointDef' data-dojo-type='app/location/PointDef' data-dojo-props="label: 'Start'" class='col-md-2'></div>
         <div class='dist-block col-md-3' data-dojo-attach-point='distGroup'>
             <div class="form-group">
                 <label class='control-label'>Distance (in meters)</label>
