--- a/src/app/tests/GridTests.html
+++ b/src/app/tests/GridTests.html
@@ -1,16 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head>
+    <title>GridTests</title>
+
+    <!-- META TAGS -->
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- CSS -->
-    <!--[if lte IE 8]>
-        <link rel="stylesheet" href="leaflet/leaflet.ie.css" />
-    <![endif]-->
-    <!-- bootstrap .css files (and .js files for that matter) to 
-        not play nice with the dojo build system -->
-    <link rel="stylesheet" href="../../bootstrap/css/bootstrap.css"/>
-    <link rel="stylesheet" href="../../bootstrap/css/bootstrap-responsive.css"/>
     <link rel='stylesheet' href='../resources/App.css'>
     <style>
         html, body {
@@ -22,49 +18,17 @@
         }
     </style>
 </head>
-<body>
+<body class='claro'>
     <div data-dojo-type="app/catch/Catch" id='catch'></div>
+
+    <!-- JAVASCRIPT -->
+    <script type="text/javascript" src="../../jquery/dist/jquery.js"></script>
+    <script type='text/javascript' src="../../bootstrap/dist/js/bootstrap.js"></script>
     <script data-dojo-config='isDebug: 1' src='../../dojo/dojo.js'></script>
+    <script src='../../app/packages.js'></script>
+
     <script>
-        define.amd.jQuery = true;
-        require({
-            packages: [
-                {
-                    name: 'app',
-                    location: '../app'
-                },{
-                    name: 'ijit',
-                    location: '../ijit'
-                },{
-                    name: 'bootstrap',
-                    location: '../bootstrap',
-                    main: 'js/bootstrap'
-                },{
-                    name: 'jquery',
-                    location: '../jquery',
-                    main: 'jquery-1.10.0'
-                },{
-                    name: 'leaflet',
-                    location: '../leaflet',
-                    main: 'leaflet-src'
-                }, {
-                    name: 'agrc',
-                    location: '../agrc'
-                }, {
-                    name: 'dgrid',
-                    location: '../dgrid'
-                }, {
-                    name: 'put-selector',
-                    location: '../put-selector'
-                }, {
-                    name: 'xstyle',
-                    location: '../xstyle'
-                }, {
-                    name: 'boostrap-combobox',
-                    location: '../bootstrap-combobox'
-                }
-            ]
-        }, ['dojo/parser', 'dijit/registry', 'dojo/domReady!', 'app/main'], function (parser, reg) {
+        require({baseUrl: '../../'}, ['dojo/parser', 'dijit/registry', 'dojo/domReady!', 'leaflet'], function (parser, reg) {
             parser.parse();
             grid = reg.byId('catch').grid;
         });
