--- a/src/app/tests/MoreInfoDialogTests.html
+++ b/src/app/tests/MoreInfoDialogTests.html
@@ -1,16 +1,10 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS -->
-    <!--[if lte IE 8]>
-        <link rel="stylesheet" href="leaflet/leaflet.ie.css" />
-    <![endif]-->
-    <!-- bootstrap .css files (and .js files for that matter) to 
-        not play nice with the dojo build system -->
-    <link rel="stylesheet" href="../../bootstrap/css/bootstrap.css"/>
-    <!-- <link rel="stylesheet" href="../../bootstrap/css/bootstrap-responsive.css"/> -->
     <link rel='stylesheet' href='../resources/App.css'>
     <style>
         html, body {
@@ -22,65 +16,35 @@
         }
     </style>
 </head>
-<body>
+<body class='claro'>
     <div class="catch">
         <div id='testDiv'></div>
-    </div>    <script data-dojo-config='isDebug: 1' src='../../dojo/dojo.js'></script>
-    <script>
-        define.amd.jQuery = true;
-        require({
-            packages: [
-                {
-                    name: 'app',
-                    location: '../app'
-                },{
-                    name: 'ijit',
-                    location: '../ijit'
-                },{
-                    name: 'bootstrap',
-                    location: '../bootstrap',
-                    main: 'js/bootstrap'
-                },{
-                    name: 'jquery',
-                    location: '../jquery',
-                    main: 'jquery-1.10.0'
-                },{
-                    name: 'leaflet',
-                    location: '../leaflet',
-                    main: 'leaflet-src'
-                }, {
-                    name: 'agrc',
-                    location: '../agrc'
-                }, {
-                    name: 'dgrid',
-                    location: '../dgrid'
-                }, {
-                    name: 'put-selector',
-                    location: '../put-selector'
-                }, {
-                    name: 'xstyle',
-                    location: '../xstyle'
-                }, {
-                    name: 'bootstrap-combobox',
-                    location: '../bootstrap-combobox'
-                }
-            ]
-        }, ['jquery', 'bootstrap', 'app/catch/MoreInfoDialog', 'dojo/domReady!'], 
+    </div>
 
-        function (jquery, boot, MoreInfoDialog) {
-            var store = {
-                data: [{
-                    guid: 'blah',
-                    id: 3,
-                    pass: 1
-                }],
-                get: function () {
-                    return this.data[0]
-                }
-            };
-            dialog = new MoreInfoDialog({store: store}, 'testDiv');
-            dialog.show();
-        });
+    <!-- JAVASCRIPT -->
+    <script type="text/javascript" src="../../jquery/dist/jquery.js"></script>
+    <script type='text/javascript' src="../../bootstrap/dist/js/bootstrap.js"></script>
+    <script data-dojo-config='isDebug: 1' src='../../dojo/dojo.js'></script>
+    <script src='../../app/packages.js'></script>
+    <script>
+        require(
+            {baseUrl: '../../'},
+            ['jquery', 'bootstrap', 'app/catch/MoreInfoDialog', 'dojo/domReady!'],
+            function (jquery, boot, MoreInfoDialog) {
+                var row = {};
+                row[AGRC.fieldNames.fish.FISH_ID] = 'blah';
+                row[AGRC.fieldNames.fish.CATCH_ID] = 3;
+                row[AGRC.fieldNames.fish.PASS_NUM] = 1;
+                var store = {
+                    data: [row],
+                    getSync: function () {
+                        return this.data[0]
+                    }
+                };
+                dialog = new MoreInfoDialog({catchStore: store}, 'testDiv');
+                dialog.show('blah', 'Diet');
+            }
+        );
     </script>
 </body>
 </html>
