--- a/src/app/templates/NewCollectionEvent.html
+++ b/src/app/templates/NewCollectionEvent.html
@@ -10,10 +10,10 @@
         <div class='tab-pane fade' id='methodTab'>
             <div data-dojo-attach-point="methodTb" data-dojo-type="app/method/Method"></div>
         </div>
-        <div id="catchTab" class="tab-pane fade">
+        <div class="tab-pane fade" id="catchTab">
             <div data-dojo-attach-point="catchTb" data-dojo-type="app/catch/Catch"></div>
         </div>
-        <div id="habitatTab" class="tab-pane fade">
+        <div class="tab-pane fade" id="habitatTab">
             <div data-dojo-attach-point="habitatTb" data-dojo-type="app/habitat/Habitat"></div>
         </div>
     </div>
