--- a/src/app/templates/OtherOptionHandler.html
+++ b/src/app/templates/OtherOptionHandler.html
@@ -26,8 +26,8 @@
                     </fieldset>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-default" data-dismiss='modal' tabindex="4">Close</button>
-                    <button class="btn btn-primary" disabled tabindex="3" 
+                    <button class="btn btn-default" data-dismiss='modal' data-dojo-attach-event='click: onCancel' tabindex="4">Cancel</button>
+                    <button class="btn btn-primary" disabled tabindex="3"
                         data-dojo-attach-event="click: onSubmit"
                         data-dojo-attach-point='submitBtn'>Submit</button>
                 </div>
