show popup on top of more info window

--- a/src/app/catch/resources/MoreInfoDialog.css
+++ b/src/app/catch/resources/MoreInfoDialog.css
@@ -30,6 +30,7 @@
 }
 .more-info-dialog .dgrid .dgrid-cell {
     font-size: 14px;
+    height: 27px;
 }
 .more-info-dialog .modal .tab-content {
     max-height: 300px;
