Reports can be submitted and data is recorded in the DB
Closes #15

--- a/src/app/catch/resources/MoreInfoDialog.css
+++ b/src/app/catch/resources/MoreInfoDialog.css
@@ -1,7 +1,7 @@
 .more-info-dialog .modal-dialog {
     width: 680px;
 }
-.more-info-dialog .dgrid .field-ID {
+.more-info-dialog .dgrid .field-TEMP_ID {
     display: none;
 }
 .more-info-dialog .dgrid .field-CLASS {
