--- a/src/app/catch/templates/Health.html
+++ b/src/app/catch/templates/Health.html
@@ -57,7 +57,7 @@
     </div>
     <div class="form-group">
         <label class='control-label'>Plasma Protein (g/100 ml)</label>
-        <input type="number" min='0' max='100' data-dojo-attach-point='plasmaTxt' class='form-control'>
+        <input type="number" min='0.1' max='100.0' step='0.1' data-dojo-attach-point='plasmaTxt' class='form-control'>
     </div>
     <div class="form-group">
         <label class='control-label'>Fin Condition</label>
