--- a/src/app/habitat/templates/Habitat.html
+++ b/src/app/habitat/templates/Habitat.html
@@ -67,7 +67,7 @@
                 <input type='number'
                     data-dojo-attach-point='largeWoodyDebrisTxt'
                     min='0'
-                    max='100'
+                    max='1000'
                     class='form-control'>
             </div>
             <div class="form-group">
@@ -160,7 +160,7 @@
                             class='form-control'>
                     </div>
                     <div class="pull-right"> <!-- text-danger or text-success -->
-                        <strong>Total</strong> 
+                        <strong>Total</strong>
                         <span data-dojo-attach-point='sedTotalSpan' class="badge">0</span>
                     </div>
                 </div>
@@ -186,8 +186,9 @@
                 <label class='control-label'>Sinuosity</label>
                 <input type='number'
                     data-dojo-attach-point='sinuosityTxt'
-                    min='1'
-                    max='4'
+                    min='1.0'
+                    max='4.0'
+                    step='0.1'
                     class='form-control'>
             </div>
             <div class="form-group">
@@ -228,7 +229,7 @@
                 <label class='control-label'>Conductivity</label>
                 <input type='number'
                     data-dojo-attach-point='conductivityTxt'
-                    min='50'
+                    min='0'
                     max='1500'
                     class='form-control'>
             </div>
