--- a/src/app/method/templates/RaftBoat.html
+++ b/src/app/method/templates/RaftBoat.html
@@ -7,9 +7,12 @@
             <select data-dojo-attach-point="arrayTypeSelect" class='form-control'></select>
         </div>
         <div class="form-group small">
-            <input type="number" 
-                data-dojo-attach-point='numberTxt' 
-                value='1' class='form-control'>
+            <input type="number"
+                data-dojo-attach-point='numberTxt'
+                class='form-control'
+                value='1'
+                min='1'
+                max='3'>
         </div>
         <div class="form-group medium">
             <select data-dojo-attach-point='cathodeTypeSelect' class='form-control'></select>
