Refactor/Redesign Method Tab
Removed backpack, canoe/barge, & raft/boats widgets and associated
tables in database.

Added new “Equipment” table to database with fields from the three
tables that were removed as well as the method-related fields in the
“SamplingEvents” feature class. Removed those fields from the
“SamplingEvents” feature class.

Added new field “TYPE” and associated domain to the “Equipment” table.

Added equipment widget to the Method tab to match the new equipment
table in the database.

Closes #2

--- a/src/app/method/templates/Method.html
+++ b/src/app/method/templates/Method.html
@@ -1,116 +1,4 @@
 <div>
     <h4>Equipment</h4>
-    <ul class="nav nav-pills">
-        <li class="active"><a href="#spec_backpack" id="backpackTab" data-toggle='tab'>Backpack</a></li>
-        <li><a href="#spec_canoeBarge" id="canoeBargeTab" data-toggle='tab'>Canoe/Barge</a></li>
-        <li><a href="#spec_raftBoat" id="raftBoatTab" data-toggle='tab'>Raft/Boat</a></li>
-    </ul>
-    <div class="tab-content">
-        <div class="tab-pane fade in active" id="spec_backpack">
-            <div data-dojo-type="app/method/BackpacksContainer"
-                data-dojo-attach-point='backpacksContainer'></div>
-        </div>
-        <div class="tab-pane fade" id="spec_canoeBarge">
-            <div data-dojo-type="app/method/CanoeBargesContainer"
-                data-dojo-attach-point='canoeBargesContainer'></div>
-        </div>
-        <div class="tab-pane fade" id="spec_raftBoat">
-            <div data-dojo-type="app/method/RaftBoatsContainer"
-                data-dojo-attach-point='raftBoatsContainer'></div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-3">
-            <div class="form-group">
-                <label class='control-label'># Anodes</label>
-                <input type="number"
-                    data-dojo-attach-point='numberTxt'
-                    value='1'
-                    min='1'
-                    max='5'
-                    class='form-control'>
-            </div>
-            <div class="form-group">
-                <label class='control-label'>Anode Diameter (centimeters)</label>
-                <input type="number"
-                    data-dojo-attach-point='anodeDiameterTxt'
-                    min='1'
-                    max='750'
-                    class='form-control'>
-            </div>
-            <div class="form-group">
-                <label class='control-label'>Stock Diameter (centimeters)</label>
-                <input type="number"
-                    data-dojo-attach-point='stockDiameterTxt'
-                    min='0.1'
-                    max='2.54'
-                    step='0.01'
-                    class='form-control'>
-            </div>
-            <div class="form-group">
-                <label class='control-label'>Cathode Length (centimeters)</label>
-                <input type="number"
-                    data-dojo-attach-point='cathodeLengthTxt'
-                    min='1'
-                    max='121'
-                    step='0.01'
-                    class='form-control'>
-            </div>
-            <div class="form-group">
-                <label class='control-label'>Cathode Diameter (centimeters)</label>
-                <input type="number"
-                    data-dojo-attach-point='cathodeDiameterTxt'
-                    min='0.1'
-                    max='2.54'
-                    step='0.01'
-                    class='form-control'>
-            </div>
-            <div class="form-group">
-                <label class='control-label'>Machine Resistance (ohms)</label>
-                <input type="number"
-                    data-dojo-attach-point='machineResistenceTxt'
-                    class='form-control'>
-            </div>
-            <div class="form-group">
-                <label class='control-label'>Waveform</label>
-                <select data-dojo-attach-point="waveformSelect"
-                    class='form-control'>
-                </select>
-            </div>
-            <div class="form-group">
-                <label class='control-label'>Voltage (volts)</label>
-                <input type="number"
-                    data-dojo-attach-point="voltsTxt"
-                    min='0'
-                    max='1000'
-                    step='0.01'
-                    class='form-control'>
-            </div>
-            <div class="form-group">
-                <label class='control-label'>Duty Cycle (%)</label>
-                <input type="number"
-                    data-dojo-attach-point="dutyCycleTxt"
-                    min='0'
-                    max='100'
-                    class='form-control'>
-            </div>
-            <div class="form-group">
-                <label class='control-label'>Frequency (hertz)</label>
-                <input type="number"
-                    data-dojo-attach-point='frequencyTxt'
-                    min='1'
-                    max='1000'
-                    class='form-control'>
-            </div>
-            <div class="form-group">
-                <label class='control-label'>Amps</label>
-                <input type="number"
-                    data-dojo-attach-point='ampsTxt'
-                    min='0'
-                    max='150'
-                    step='0.1'
-                    class='form-control'>
-            </div>
-        </div>
-    </div>
+    <div data-dojo-attach-point="addBtnWidgetsContainer"></div>
 </div>
