Don't allow submission with invalid numeric inputs
Prevent submission of report if any inputs are currently invalid.
Disable submit button in more info dialog if there are any inputs that
are currently invalid (see health tab).
Fixes #17

--- a/src/app/catch/templates/MoreInfoDialog.html
+++ b/src/app/catch/templates/MoreInfoDialog.html
@@ -48,6 +48,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-primary"
+                        data-dojo-attach-point='submitBtn'
                         data-dojo-attach-event='onclick: onSubmitClick'>Submit</button>
                     <button class="btn btn-default"
                         data-dojo-attach-event='onclick: onCancel'>Cancel</button>
