--- a/src/app/templates/SettingsDialog.html
+++ b/src/app/templates/SettingsDialog.html
@@ -7,7 +7,25 @@
                     <h4 class='modal-title'>Settings</h4>
                 </div>
                 <div class="modal-body">
-                    <div data-dojo-type="app/location/CoordTypeToggle"></div>
+                    <h4>Coordinate Type</h4>
+                    <div class='btn-group' data-toggle='buttons'>
+                        <label class='btn btn-primary active' data-dojo-attach-point='coord_utm83Btn' >
+                            <input type='radio' name='coord_options' value='utm83'>UTM (NAD83)
+                        </label>
+                        <label class='btn btn-primary' data-dojo-attach-point='coord_llBtn' >
+                            <input type='radio' name='coord_options' value='ll'>Lat/Long
+                        </label>
+                        <label class='btn btn-primary' data-dojo-attach-point='coord_utm27Btn' >
+                            <input type='radio' name='coord_options' value='utm27'>UTM (NAD27)
+                        </label>
+                    </div>
+                    <h4>Map Settings</h4>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" data-dojo-attach-point='mouseWheelChBox'
+                                data-dojo-attach-event='change: onMouseWheelChange'> Mouse wheel zooming
+                        </label>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <a href="#" class="btn btn-primary" data-dismiss='modal' aria-hidden='true'>Close</a>
