Bold catch grid row if it has more info attached
Closes #12

--- a/src/app/catch/resources/Catch.css
+++ b/src/app/catch/resources/Catch.css
@@ -73,3 +73,6 @@ div[data-dojo-attach-point='batchForm'] .btn {
     width: 100%;
     margin-top: 5px;
 }
+.catch .dgrid .dgrid-row.bold {
+    font-weight: bold;
+}
