local caching of multiple addBtnWidgets working on method tab

--- a/src/app/method/templates/Equipment.html
+++ b/src/app/method/templates/Equipment.html
@@ -1,4 +1,5 @@
 <div>
+    <input type='text' data-dojo-attach-point='typeTxt' class='hidden' value='backpack'>
     <ul class="nav nav-pills">
         <li class="active" data-type='backpack'><a href="#spec_backpack_canoebarge${id}" id="backpackTab${id}" data-toggle='tab'>Backpack</a></li>
         <li data-type='canoebarge'><a href="#spec_backpack_canoebarge${id}" id="canoeBargeTab${id}" data-toggle='tab'>Canoe/Barge</a></li>
