better styling of verify location and error msg
Related to #27

--- a/src/app/location/resources/Location.styl
+++ b/src/app/location/resources/Location.styl
@@ -1,17 +1,22 @@
-@import 'StartEndGeoDef.css';
-@import 'StartDistDirGeoDef.css';
-@import 'PointDef.css';
-@import 'IDGeoDef.css';
-@import 'VerifyMap.css';
+@import 'StartEndGeoDef.css'
+@import 'StartDistDirGeoDef.css'
+@import 'PointDef.css'
+@import 'IDGeoDef.css'
+@import 'VerifyMap.css'
 
-.location .v-map {
-    height: 400px;
-    margin: 10px 0;
-    border: solid 1px #ccc;
-}
-.location .nav-pills {
-    margin-bottom: 8px;
-}
-.location h4:first-child {
-    margin-top: 0;
-}
+.location
+    .v-map
+        height 400px
+        margin 10px 0
+        border solid 1px #ccc
+
+    .nav-pills
+        margin-bottom 8px
+
+    h4:first-child
+        margin-top 0
+
+    [data-dojo-attach-point='verifyMapBtn']
+        margin-top 10px
+        width 360px
+        margin-bottom 15px
