--- a/src/app/location/templates/Location.html
+++ b/src/app/location/templates/Location.html
@@ -25,10 +25,8 @@
             <div data-dojo-attach-point='idGeoDef' data-dojo-type='app/location/IDGeoDef'></div>
         </div>
     </div>
-    <button data-dojo-attach-point='verifyMapBtn' class='btn btn-default' data-loading-text='Verifying...this may take a few seconds.'>Verify Location</button>
-    <div class="form-group has-error">
-        <span data-dojo-attach-point='validateMsg' class='help-block'></span>
-    </div>
+    <button data-dojo-attach-point='verifyMapBtn' class='btn btn-success' data-loading-text='Verifying...this may take a few seconds.'>Verify Location</button>
+    <div class="alert alert-danger hidden" data-dojo-attach-point='validateMsg'></div>
 
     <div class="row">
         <div class="col-md-3">
