split habitat into columns
Closes #27

--- a/src/app/habitat/resources/Habitat.styl
+++ b/src/app/habitat/resources/Habitat.styl
@@ -1,6 +1,6 @@
-.habitat .text-danger .badge {
-    background-color: #b94a48;
-}
-.habitat .text-success .badge {
-    background-color: #468847;
-}
+.habitat
+    .text-danger .badge
+        background-color #b94a48
+
+    .text-success .badge
+        background-color #468847
