--- a/src/app/habitat/templates/Habitat.html
+++ b/src/app/habitat/templates/Habitat.html
@@ -54,6 +54,8 @@
                     step='0.01'
                     class='form-control'>
             </div>
+        </div>
+        <div class="col-md-3">
             <div class="form-group">
                 <label class='control-label'>Dominant Overstory</label>
                 <select data-dojo-attach-point="overstorySelect" class='form-control'></select>
@@ -98,7 +100,8 @@
                     max='100'
                     class='form-control'>
             </div>
-
+        </div>
+        <div class="col-md-3">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">Sediment Class Percentages</h3>
@@ -165,6 +168,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="col-md-3">
             <div class="form-group">
                 <label class='control-label'>Vegetation Density</label>
                 <input type='number'
