remember species and length type on new row add
Closes #25

--- a/src/app/catch/resources/Catch.styl
+++ b/src/app/catch/resources/Catch.styl
@@ -1,78 +1,79 @@
-@import 'FilteringSelectForGrid.css';
-@import 'MoreInfoDialog.css';
-@import 'Tag.css';
-@import 'TagsContainer.css';
-@import 'Health.css';
+@import 'FilteringSelectForGrid.css'
+@import 'MoreInfoDialog.css'
+@import 'Tag.css'
+@import 'TagsContainer.css'
+@import 'Health.css'
 
-.catch [data-dojo-attach-point='gridDiv'] {
-    margin-top: 10px;
-}
-.catch .dgrid-header {
-    right: 0px;
-}
-.catch .dgrid-scroller {
-    overflow-y: auto;
-}
-.catch .dgrid-content:focus {
-    outline: none;
-}
-.catch .field-CATCH_ID {
-    width: 35px;
-}
-.catch .dgrid-grid {
-    border-left: none;
-    border-right: none;
-    border-bottom: none;
-}
-.catch .dgrid-row-odd {
-    background-color: #f9f9f9;
-}
-.catch .dgrid-selected {
-    background-color: #E1EBF5;
-}
-.catch .dgrid-cell.batch {
-    background-color: #F9FFC0;
-}
-.catch .dgrid th:focus,
-.catch .dgrid-scroller:focus,
-.catch .dgrid td:focus {
-    outline: none;
-}
-.catch .dgrid .field-FISH_ID,
-.catch .dgrid .field-PASS_NUM,
-.catch .dgrid .field-EVENT_ID,
-.catch .dgrid .field-NOTES {
-    display: none;
-}
-.catch .dgrid-content .dgrid-cell-padding {
-    height: 40px;
-}
-.catch .dgrid .dgrid-cell {
-    vertical-align: middle;
-}
-.catch .dgrid .combobox-container {
-    margin: 0;
-}
-.catch .btn-right-container>div {
-    display: inline-block;
-}
-.catch .btn-right-container .input-append {
-    margin-bottom: 0;
-}
-.catch .btn-right-container .popover-content {
-    padding: 5px;
-}
-div[data-dojo-attach-point='batchForm'] label {
-    margin-bottom: 0px;
-}
-div[data-dojo-attach-point='batchForm'] .form-group {
-    margin-bottom: 10px;
-    width: 150px;
-}
-div[data-dojo-attach-point='batchForm'] .btn {
-    width: 100%;
-    margin-top: 5px;
-}
-.catch .dgrid .dgrid-row.bold {
-    font-weight: bold;
-}
+.catch
+    [data-dojo-attach-point='gridDiv']
+        margin-top 10px
+
+    .dgrid-header
+        right 0px
+
+    .dgrid-scroller
+        overflow-y auto
+
+    .dgrid-content:focus
+        outline none
+
+    .field-CATCH_ID
+        width 35px
+
+    .dgrid-grid
+        border-left none
+        border-right none
+        border-bottom none
+
+    .dgrid-row-odd
+        background-color #f9f9f9
+
+    .dgrid-selected
+        background-color #E1EBF5
+
+    .dgrid-cell.batch
+        background-color #F9FFC0
+
+    .dgrid th:focus,
+    .dgrid-scroller:focus,
+    .dgrid td:focus
+        outline none
+
+    .dgrid
+        .field-FISH_ID,
+        .field-PASS_NUM,
+        .field-EVENT_ID,
+        .field-NOTES
+            display none
+
+        .dgrid-cell
+            vertical-align middle
+
+        .combobox-container
+            margin 0
+
+        .dgrid-row.bold
+            font-weight bold
+
+    .dgrid-content .dgrid-cell-padding
+        height 40px
+
+    .btn-right-container>div
+        display inline-block
+
+    .btn-right-container .input-append
+        margin-bottom 0
+
+    .btn-right-container .popover-content
+        padding 5px
+
+div[data-dojo-attach-point='batchForm'] label
+    margin-bottom 0px
+
+div[data-dojo-attach-point='batchForm'] .form-group
+    margin-bottom 10px
+    width 150px
+
+div[data-dojo-attach-point='batchForm'] .btn
+    width 100%
+    margin-top 5px
