--- a/src/app/location/resources/Location.styl
+++ b/src/app/location/resources/Location.styl
@@ -4,6 +4,7 @@
 @import 'IDGeoDef.css'
 @import 'VerifyMap.css'
 
+$width = 360px
 .location
     .v-map
         height 400px
@@ -18,5 +19,8 @@
 
     [data-dojo-attach-point='verifyMapBtn']
         margin-top 10px
-        width 360px
+        width $width
         margin-bottom 15px
+
+    .alert
+        width $width
