--- a/src/app/catch/templates/Catch.html
+++ b/src/app/catch/templates/Catch.html
@@ -25,7 +25,7 @@
             <a class="btn btn-default disabled"
                 data-dojo-attach-event='onclick: moreInfo'>
                 Health</a>
-            <a class="btn btn-default disabled" 
+            <a class="btn btn-default disabled"
                 data-dojo-attach-event="onclick: moreInfo">
                 Notes</a>
             <a class="btn btn-default disabled"
@@ -57,18 +57,9 @@
     <div class="hidden" data-dojo-attach-point='batchFormContainer'>
         <div data-dojo-attach-point="batchForm">
             <div class="form-group">
-                <label class="control-label">Code</label>
-                <select class="form-control"
-                    data-dojo-attach-point='batchCodeSelect'></select>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Number</label>
-                <input type="number" class="form-control"
-                    data-dojo-attach-point='batchNumberTxt'>
-            </div>
-            <div class="form-group">
                 <label class="control-label">Weight</label>
-                <input type="number" class='form-control' placeholder='optional'
+                <input type="number" class='form-control'
+                    step='0.1'
                     data-dojo-attach-point='batchWeightTxt'>
             </div>
             <button class="btn btn-primary" disabled
