Show summary report on submit
Closes #10

--- a/src/app/templates/NewCollectionEvent.html
+++ b/src/app/templates/NewCollectionEvent.html
@@ -17,4 +17,5 @@
             <div data-dojo-attach-point="habitatTb" data-dojo-type="app/habitat/Habitat"></div>
         </div>
     </div>
+    <div data-dojo-attach-point="reportSummary" data-dojo-type='app/SummaryReport'></div>
 </div>
