Added units to habitat fields #38

--- a/src/app/habitat/templates/Habitat.html
+++ b/src/app/habitat/templates/Habitat.html
@@ -10,7 +10,7 @@
                     class='form-control'>
             </div>
             <div class="form-group">
-                <label class='control-label'>Bankfull Width</label>
+                <label class='control-label'>Bankfull Width (m)</label>
                 <input type='number'
                     data-dojo-attach-point='bankfulWidthTxt'
                     min='0.00'
@@ -19,7 +19,7 @@
                     class='form-control'>
             </div>
             <div class="form-group">
-                <label class='control-label'>Depth Right Third</label>
+                <label class='control-label'>Depth Right Third (m)</label>
                 <input type='number'
                     data-dojo-attach-point='depthRightThirdTxt'
                     min='0.00'
@@ -28,7 +28,7 @@
                     class='form-control'>
             </div>
             <div class="form-group">
-                <label class='control-label'>Depth Left Third</label>
+                <label class='control-label'>Depth Left Third (m)</label>
                 <input type='number'
                     data-dojo-attach-point='depthLeftThirdTxt'
                     min='0.00'
@@ -37,7 +37,7 @@
                     class='form-control'>
             </div>
             <div class="form-group">
-                <label class='control-label'>Depth Mid Channel</label>
+                <label class='control-label'>Depth Mid Channel (m)</label>
                 <input type='number'
                     data-dojo-attach-point='depthMidChannelTxt'
                     min='0.00'
@@ -46,7 +46,7 @@
                     class='form-control'>
             </div>
             <div class="form-group">
-                <label class='control-label'>Maximum Depth</label>
+                <label class='control-label'>Maximum Depth (m)</label>
                 <input type='number'
                     data-dojo-attach-point='maxDepthTxt'
                     min='0.00'
@@ -179,7 +179,7 @@
                     class='form-control'>
             </div>
             <div class="form-group">
-                <label class='control-label'>Wetted Width</label>
+                <label class='control-label'>Wetted Width (m)</label>
                 <input type='number'
                     data-dojo-attach-point='wettedWidthTxt'
                     min='0.00'
@@ -197,7 +197,7 @@
                     class='form-control'>
             </div>
             <div class="form-group">
-                <label class='control-label'>Water Velocity</label>
+                <label class='control-label'>Water Velocity (m/s)</label>
                 <input type='number'
                     data-dojo-attach-point='waterVelocityTxt'
                     min='0.00'
@@ -214,7 +214,7 @@
                     class='form-control'>
             </div>
             <div class="form-group">
-                <label class='control-label'>Water Temperature</label>
+                <label class='control-label'>Water Temperature (C)</label>
                 <input type='number'
                     data-dojo-attach-point='waterTempTxt'
                     min='0.00'
