New pass has initial row #37

--- a/src/app/catch/templates/Catch.html
+++ b/src/app/catch/templates/Catch.html
@@ -10,7 +10,7 @@
     </div>
     <button class='btn btn-default btn-sm'
         data-dojo-attach-point='addPassBtn'
-        data-dojo-attach-event='onclick: addPass'>
+        data-dojo-attach-event='onclick: addPassClick'>
         <i class="glyphicon glyphicon-plus"
             data-dojo-attach-point='icon'></i>
     </button>
