add contrast to pass group

--- a/src/app/catch/resources/Catch.styl
+++ b/src/app/catch/resources/Catch.styl
@@ -67,5 +67,11 @@
     .btn-right-container .popover-content
         padding 5px
 
+    .btn-primary
+        background-color #337ab7 + 25
+
+        &.active
+            background-color #286090 - 25
+
 div[data-dojo-attach-point='batchForm'] .btn
     width 100%
