make hr's more visible
closes #64

--- a/src/app/method/resources/Equipment.styl
+++ b/src/app/method/resources/Equipment.styl
@@ -1,3 +1,6 @@
-.equipment .nav-pills {
-    margin-bottom: 15px;
-}
+.equipment .nav-pills
+    margin-bottom 15px
+
+.hr--bold
+    border-top 3px solid black + 50%
+    border-radius 1px
