--- a/src/app/method/templates/Equipment.html
+++ b/src/app/method/templates/Equipment.html
@@ -139,5 +139,5 @@
     <button class='btn btn-default btn-sm' data-dojo-attach-point='btn'>
         <span data-dojo-attach-point='icon' class='glyphicon glyphicon-plus'></span>
     </button>
-    <hr>
+    <hr class="hr--bold">
 </div>
