start adding survey purpose
refs #59

need to figure out how values get linked to drop down still

--- a/src/app/method/templates/Equipment.html
+++ b/src/app/method/templates/Equipment.html
@@ -135,6 +135,12 @@
                 step='0.1'
                 class='form-control'>
         </div>
+        <div class="form-group col-md-2">
+            <label class='control-label'>Survey Purpose</label>
+            <select data-dojo-attach-point="surveyPurposeSelect"
+                class='form-control'>
+            </select>
+        </div>
     </div>
     <button class='btn btn-default btn-sm' data-dojo-attach-point='btn'>
         <span data-dojo-attach-point='icon' class='glyphicon glyphicon-plus'></span>
