add * to required fields
it appears these are the only "required" fields

close #58

--- a/src/app/location/templates/Station.html
+++ b/src/app/location/templates/Station.html
@@ -3,7 +3,7 @@
     <p class="help-block">Select a station by clicking on the map above.</p>
     <div class="form-inline">
         <div class="form-group">
-            <input type='text' disabled data-dojo-attach-point='stationTxt' class='form-control'>
+            <span class="text-danger required">*</span><input type='text' disabled data-dojo-attach-point='stationTxt' class='form-control'>
         </div>
         <a class="btn btn-default" data-dojo-attach-point='newStationBtn' data-toggle='modal' href='#stationModal'>
             <span class='glyphicon glyphicon-plus'></span>
