--- a/src/app/location/templates/Location.html
+++ b/src/app/location/templates/Location.html
@@ -26,12 +26,12 @@
         <div class="col-md-4">
             <div class="form-group">
                 <label class='control-label'>Stream Length (meters)</label>
-                <input type="number" data-dojo-attach-point="streamLengthTxt" class='form-control'>
+                <span class="text-danger required">*</span><input type="number" data-dojo-attach-point="streamLengthTxt" class='form-control'>
             </div>
 
             <div class="form-group">
                 <label class='control-label'>Collection Date</label>
-                <input type="date" data-dojo-attach-point='dateTxt' class='form-control'>
+                <span class="text-danger required">*</span><input type="date" data-dojo-attach-point='dateTxt' class='form-control'>
             </div>
 
             <div class="form-group">
