switch to inline form styling
closes #57

--- a/src/app/location/resources/PointDef.styl
+++ b/src/app/location/resources/PointDef.styl
@@ -1,9 +1,13 @@
-.point-def input[type='text'] {
-    margin-bottom: 0;
-}
-.point-def .help-block {
-    font-size: small;
-}
+.point-def
+    input[type='text']
+        margin-bottom 5px
+
+    .help-block
+        font-size small
+
+    &__primary-label
+        width: 35px
+
 .point-def .form-group,
 .point-def .form-group label {
     margin-bottom: 0;
