--- a/src/app/location/resources/StartDistDirGeoDef.styl
+++ b/src/app/location/resources/StartDistDirGeoDef.styl
@@ -1,9 +1,1 @@
-.start-dist-dir .dist-block {
-    margin-top: 30px;
-}
-.start-dist-dir .dist-block label {
-    margin-bottom: -6px;
-}
-.start-dist-dir .dist-block .btn-group {
-    margin-top: 15px;
-}
+.start-dist-dir {}
