--- a/src/app/location/templates/StartDistDirGeoDef.html
+++ b/src/app/location/templates/StartDistDirGeoDef.html
@@ -1,7 +1,7 @@
 <div>
-    <div class='row'>
-        <div data-dojo-attach-point='startPointDef' data-dojo-type='app/location/PointDef' data-dojo-props="label: 'Start'" class='col-md-2'></div>
-        <div class='dist-block col-md-3' data-dojo-attach-point='distGroup'>
+    <div class='form-inline'>
+        <div data-dojo-attach-point='startPointDef' data-dojo-type='app/location/PointDef' data-dojo-props="label: 'Start'"></div>
+        <div class='dist-block' data-dojo-attach-point='distGroup'>
             <div class="form-group">
                 <label class='control-label'>Distance (in meters)</label>
                 <input type='number' class='form-control' data-dojo-attach-point='distanceBox'>
