--- a/src/app/location/templates/StartEndGeoDef.html
+++ b/src/app/location/templates/StartEndGeoDef.html
@@ -1,6 +1,4 @@
 <div>
-    <div class='row'>
-        <div data-dojo-attach-point='startPointDef' data-dojo-type='app/location/PointDef' data-dojo-props="label: 'Start'" class='col-md-2'></div>
-        <div data-dojo-attach-point='endPointDef' data-dojo-type='app/location/PointDef' data-dojo-props="label: 'End'" class='col-md-2'></div>
-    </div>
+    <div data-dojo-attach-point='startPointDef' data-dojo-type='app/location/PointDef' data-dojo-props="label: 'Start'"></div>
+    <div data-dojo-attach-point='endPointDef' data-dojo-type='app/location/PointDef' data-dojo-props="label: 'End'"></div>
 </div>
